--- a/login_app/templates/login_app/login.html
+++ b/login_app/templates/login_app/login.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="{% static 'img/fabico.ico' %}">
 
     <!--BOOTSTRAP CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" 
@@ -27,9 +28,7 @@
     <header>
 
         <div class="d-flex p-2 justify-content-center" id="brand">
-
-            <img src="{% static 'img/brand.png' %}" height="59px" width="250px" alt="site logo">
-        
+            <a href=" {% url 'login_app:user_login' %} "><img src="{% static 'img/brand.png' %}" height="59px" width="250px" alt="site logo"></a>
         </div>
 
     </header>
