--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -13,8 +13,11 @@
         <!-- Google open sans fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-        <!-- Font Awesome -->
+        <!-- Font Awesome
         <script src="https://use.fontawesome.com/05d211e6ee.js"></script>
+         -->
+        <!-- Chartjs -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
         <!-- Local CSS -->
         {% block css_block %} 
@@ -29,9 +32,6 @@
 
     </head>
     <body>
-
-        <h1> this is from base this will work if extends is use</h1>
-
         <header>
         {% block header_block %}
             
@@ -45,9 +45,27 @@
         </main>
 
         <footer>
-
-            
+            <div class="footer">
+                <div class="sub-footer">
+                    {% block sub-footer_block %}
+        
+                    {% endblock sub-footer_block %}
+                </div>
+                <div class="main-footer d-flex justify-content-center">
+                    <span class="text-muted">Place sticky footer content here.</span>
+                </div>
+            </div>
         </footer>
+
+        <!-- local javascript -->
+        <script src = " {% static 'js/main.js' %}"></script>
+        
+
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        
     
     </body>
 
