--- a/main_page/static/css/main.css
+++ b/main_page/static/css/main.css
@@ -34,7 +34,7 @@ body {
   
   .categories {
     border-radius: 5px;
-    padding: 15px 10px;
+    padding: 20px 10px;
     background: white;
     box-shadow: 0 4px 8px 0 rgba(100, 100, 100, 0.2), 
       0 6px 20px 0 rgba(100, 100, 100, 0.2);
@@ -52,6 +52,15 @@ body {
     box-shadow: 0 4px 8px 0 rgba(100, 100, 100, 0.2), 
       0 6px 20px 0 rgba(100, 100, 100, 0.2);
   }
+
+ .rad {
+   margin-right: 10px;
+ }
+
+ .radio-inline {
+   margin-right: 20px;
+   font-size: 14px;
+ }
   
   .footer {
       width: 100%;
@@ -67,7 +76,7 @@ body {
 
     .sub-footer {
       padding: 30px;
-      height: 200px;
+      height: 250px;
       background-color: #3C3D41;
     }
 
