--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -60,19 +60,47 @@
 
   <div class="container">
     <h6>Statistics</h6>
-    <div class="categories d-flex justify-content-center">
-      <div style="width:80%">
-        <canvas id="barchart" height="400" width="800"></canvas>
+    <div class="categories">
+      
+      <div class="row" style="border:1px solid black; margin-bottom:10px;">
+        <div class="col-lg-12 d-flex justify-content-center">
+          <div id="bar-id" style="width:80%">
+            <canvas id="barchart" height="400" width="800"></canvas>
+          </div>
+          <div id="line-id" style="width:80%; display:none;">
+            <canvas id="linechart" height="400" width="800"></canvas>
+          </div>
+          <div id="radar-id" style="width:80%; display:none;">
+            <canvas id="radarchart" height="400" width="800"></canvas>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="border:1px solid black; padding-top: 5px;">
+        <div class="col-lg-12 d-flex justify-content-center">
+          <form>
+            <label class="radio-inline">
+              <input class="rad" type="radio" name="optradio" id="bar" checked>Bar graph
+            </label>
+            <label class="radio-inline">
+              <input class="rad" type="radio" name="optradio" id="line">Line graph
+            </label>
+            <label class="radio-inline">
+              <input class="rad" type="radio" name="optradio" id="radar">Radar graph
+            </label>
+          </form>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="container">
     <h6>Classify</h6>
-    <div style="padding:20px 0 20px 20px;" class="categories">
+    <div style="padding:20px" class="categories">
       <div class="row">
 
-        <div class="col-lg-6">
+        <div class="col-lg-6" style="border:1px solid black;">
+          
           <form action="" method="POST">
             <label for="text">Enter text to classify</label>
             <input class="form-control" type="text" name="text" id="txttext" placeholder="Classify">
@@ -81,7 +109,7 @@
 
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6" style="border: 1px solid black;">
           
         </div>
       </div>
