Fix some format now ready to do the back end

--- a/login_app/templates/login_app/login.html
+++ b/login_app/templates/login_app/login.html
@@ -24,17 +24,15 @@
     <title>Login</title>
 </head>
 <body>
-
     <header>
-
         <div class="d-flex p-2 justify-content-center" id="brand">
-            <a href=" {% url 'login_app:user_login' %} "><img src="{% static 'img/brand.png' %}" height="59px" width="250px" alt="site logo"></a>
+            <a href=" {% url 'login_app:user_login' %} ">
+                <img src="{% static 'img/brand.png' %}" height="59px" width="250px" alt="site logo">
+            </a>
         </div>
-
     </header>
 
     <main>
-        
         <div class="container">
 
             <h2>Login</h2>
