--- a/main_page/static/css/main.css
+++ b/main_page/static/css/main.css
@@ -19,7 +19,6 @@ h6 {
 }
 
 .btn {
-  margin: 10px 0;
   background: #337AB7;
 }
 
@@ -28,8 +27,13 @@ h6 {
 }
 
 .container, .container-fluid {
-  border: 1px solid black;
+  /*border: 1px solid black; */
   padding-top: 20px;
+}
+
+.main-block a {
+  text-decoration: none;
+  color: #333335;
 }
 
 .categories {
@@ -73,6 +77,7 @@ h6 {
   padding-top: 40px;
   padding-right: 40px;
   text-align: center;
+
 }
 
 .legend h6 {
@@ -86,9 +91,11 @@ h6 {
   margin-bottom: 1.2em;
   text-align: left; 
 }
+
 .legend em {
   font-style: normal;
 }
+
 .legend span {
   float: right;
 }
