Fix some design problems

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -200,13 +200,13 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 d-flex justify-content-center">
         <img src="{% static 'img/brand-white.png' %}" height="59px" width="250px" alt="site logo">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 d-flex justify-content-center">
         <h2>LINKS TO SETTINGS</h2>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 d-flex justify-content-center">
         <h3>LINKS TO RESOURCES</h3>
       </div>
     </div>    
