--- a/main_page/static/css/main.css
+++ b/main_page/static/css/main.css
@@ -23,7 +23,7 @@ h6 {
 }
 
 .header-block {
-  padding-bottom: 2.3em;
+  padding-bottom: 1em;
 }
 
 .container, .container-fluid {
@@ -148,21 +148,10 @@ h6 {
   }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 375px) {
   h1 {
-  font-size:3em;
+  font-size:50px;
   }
 }
 
-@media screen and (max-width: 200px) {
-  h1 {
-  font-size:2em;
-  }
-}
-
-@media screen and (max-width: 100px) {
-  h1 {
-  font-size:1em;
-  }
-}
     
