added the functionality to read data from Db

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -30,7 +30,7 @@
         <div class="col col-lg-3 d-flex justify-content-center">
           <a href="#">
             <div style="text-align:center">
-              <div class="circle CA" style="border: 40px solid #F7474A">81</div>
+              <div id="cd" class="circle CA" style="border: 40px solid #F7474A">--</div>
               Casualty & Damage (CD)
             </div>
           </a>
@@ -41,7 +41,7 @@
         <div class="col col-lg-3 d-flex justify-content-center">
           <a href="#">
             <div style="text-align:center">
-              <div class="circle CA" style="border: 40px solid #FFB55E">100</div>
+              <div id="ca" class="circle CA" style="border: 40px solid #FFB55E">--</div>
               Caution & Advice (CA)
             </div>
           </a>
@@ -52,7 +52,7 @@
         <div class="col col-lg-3 d-flex justify-content-center">
           <a href="#">
             <div style="text-align:center">
-              <div class="circle donation" style="border: 40px solid #48BEBE">995</div>
+              <div id="donation" class="circle donation" style="border: 40px solid #48BEBE">--</div>
               Donation
             </div>
           </a>
@@ -63,7 +63,7 @@
         <div class="col col-lg-3 d-flex justify-content-center">
           <a href="#">
             <div style="text-align:center">
-              <div class="circle other" style="border: 40px solid #4F535F">850</div>
+              <div id="other" class="circle other" style="border: 40px solid #4F535F">--</div>
               Other
             </div>
           </a>
