--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -11,7 +11,10 @@
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
         <!-- Google open sans fonts -->
+        <!--
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        -->
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Open+Sans" rel="stylesheet">
 
         <!-- Font Awesome
         <script src="https://use.fontawesome.com/05d211e6ee.js"></script>
@@ -52,7 +55,7 @@
                     {% endblock sub-footer_block %}
                 </div>
                 <div class="main-footer d-flex justify-content-center">
-                    <span class="text-muted">Place sticky footer content here.</span>
+                    <span class="text-muted">2017 Information Extraction System</span>
                 </div>
             </div>
         </footer>
