--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -17,6 +17,42 @@
 {% endblock header_block %}
 
 {% block main_block %}
+
+  <!--Modal-->
+  <div class="modal" tabindex="-1" role="dialog">
+    <!--Modal-Dialog-->
+    <div class="modal-dialog" role="document">
+      <!--modal-content-->
+      <div class="modal-content">
+        
+        <!--modal-header-->
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <!--modal-header-->
+
+        <!--modal-body-->
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+        <!--modal-body-->
+
+        <!--modal-footer-->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+        <!--modal-footer-->
+      </div>
+      <!--modal-content-->
+    </div>
+    <!--Modal-Dialog-->
+  </div>
+  <!--Modal-->
+
   <!--container1-->
   <div class="container main-block">
 
@@ -91,13 +127,7 @@
         <!--col-1-->
         <div class="col-lg-12 d-flex justify-content-center">
           <div id="bar-id" style="width:80%">
-            <canvas id="barchart" height="400" width="800"></canvas>
-          </div>
-          <div id="line-id" style="width:80%; display:none;">
-            <canvas id="linechart" height="400" width="800"></canvas>
-          </div>
-          <div id="radar-id" style="width:80%; display:none;">
-            <canvas id="radarchart" height="400" width="800"></canvas>
+            <canvas id="mychart" height="400" width="800"></canvas>
           </div>
         </div>
         <!--col-1-->
@@ -256,5 +286,5 @@
     <!-- footer-row-->    
   </div>
    <!-- container-fluid-->
-        
+     
 {% endblock sub-footer_block %}
