--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -12,7 +12,7 @@
 
 {% block header_block %}
   <div class="container header-block">
-    <h1 class="loader">#urdujaph</h1>
+    <h1 class="loader" id="keyword">--</h1>
   </div>
 {% endblock header_block %}
 
@@ -35,14 +35,86 @@
 
         <!--modal-body-->
         <div class="modal-body">
-          
+          <form method="POST" id="form-import" enctype="multipart/form-data">
+            <div class="form-group">
+              {% csrf_token %}
+              <div class="row">
+                <div class="col-lg-6" style="padding-top:10px;">
+                  <label for="{{train_data_form.text_data.id_for_label}}">Sample text:</label>
+                  {{train_data_form.text_data}}
+                </div>
+                <div class="col-lg-6" style="padding-top:10px;">
+                  <label for="{{train_data_form.text_category.id_for_label}}">Select category</label>
+                  {{train_data_form.text_category}}
+                </div>
+              </div>
+            </div>
+            <hr>
+            <div class="form-group">
+              <label for="{{modal_form.document.id_for_label}}">Import from csv:</label>
+              {{upload_form.document}}
+            </div>
+          </form>
         </div>
         <!--modal-body-->
 
         <!--modal-footer-->
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="submit" id="btn-submit" form="form-import" class="btn btn-primary">Import</button>
+        </div>
+        <!--modal-footer-->
+      </div>
+      <!--modal-content-->
+    </div>
+    <!--modal-dialog-->
+  </div>
+  <!-- Modal -->
+<!--######################################################################################################-->
+  <!-- Modal -->
+  <div class="modal fade" id="extractor-settings" tabindex="-1" role="dialog" aria-labelledby="Settings" aria-hidden="true">
+    <!--modal-dialog-->
+    <div class="modal-dialog" role="document">
+      <!--modal-content-->
+      <div class="modal-content">
+        <!--modal-header-->
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Information Extractor</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <!--modal-header-->
+
+        <!--modal-body-->
+        <div class="modal-body">
+          <form method="POST" id="form-extract" action="{% url 'main_page:extract' %}" enctype="multipart/form-data">
+            <div class="form-group">
+              {% csrf_token %}
+              <div class="row">
+                <div class="col-lg-12" style="padding-top:10px;">
+                  <label for="{{text_extract_form.text_data.id_for_label}}">Extractor Keyword:</label>
+                  {{extract.text_data}}
+                </div>
+                <div class="col-lg-6" style="padding-top:10px;">
+                  
+                </div>
+              </div>
+            </div>
+            <hr>
+            <div class="form-group">
+              <label for="{{train_data_form.text_category.id_for_label}}">Number of posts to extract:</label>
+              {{extract.text_number}}
+              <p style="color:#F7474A; font-size:12px; margin-top:5px">Default: you can leave this field blank</p>
+            </div>
+          </form>
+        </div>
+        <!--modal-body-->
+
+        <!--modal-footer-->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" id="btn-submit" form="form-extract" class="btn btn-primary">Submit</button>
         </div>
         <!--modal-footer-->
       </div>
@@ -255,6 +327,8 @@
           <p id="documentation" role="button">Documentation</p>
         </div>
         <!--footer-link-2-->
+
+        
 
       </div>
       <!--col-2-->
